[package]
name = "sub"
version = "2.0.0"
edition = "2021"
authors = ["zam"]
description = "CLI tool for subtitle management - MKV operations + SubSource.net"

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
colored = "2"
zip = "2"
tempfile = "3"
home = "0.5"

[profile.release]
lto = true
strip = true
codegen-units = 1
